cmake_minimum_required(VERSION 3.0.0)
project(main VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(templateFunctionMax)
add_subdirectory(overflowException)
add_subdirectory(fileClass)
add_subdirectory(stringFormatting)
add_subdirectory(stringToInt)
add_subdirectory(buffer)
add_subdirectory(templateOverloading)
add_subdirectory(styleCasts)
add_subdirectory(memcpy)
add_subdirectory(snprintf)
add_subdirectory(dynamicCast)
add_subdirectory(sharedInstances)
add_subdirectory(integerPow)
add_subdirectory(pureVirtualFunctions)
add_subdirectory(encapsulation)
add_subdirectory(publicPrivateInheritance)
add_subdirectory(inline)
add_subdirectory(fibonacciClass)
add_subdirectory(constMethods)
add_subdirectory(diamondProblem)
add_subdirectory(polymorphism)
add_subdirectory(deriveFromString)
add_subdirectory(cFiles)
add_subdirectory(mapFind)
add_subdirectory(findFirstOF)
add_subdirectory(copyItemsToArray)
add_subdirectory(sort)
add_subdirectory(strchr)
add_subdirectory(strcpy)